--- a/src/registrar/templates/application_sidebar.html
+++ b/src/registrar/templates/application_sidebar.html
@@ -10,7 +10,7 @@
           {{ form_titles|get_item:this_step }}
         </a>
       {% else %}
-        <li class="usa-sidenav__item step__locked">
+        <li class="usa-sidenav__item step--locked">
         {{ form_titles|get_item:this_step }}
         <svg class="usa-icon" aria-labelledby="locked-step" role="img">
           <title id="locked-step">locked until previous steps have been completed </title>
