Move example text into a separate includes

--- a/src/registrar/templates/application_authorizing_official.html
+++ b/src/registrar/templates/application_authorizing_official.html
@@ -12,7 +12,7 @@
   </p>
 
   <div class="ao-example">
-    <p>Domain requests from <strong>cities</strong> must be authorized by the mayor or the equivalent highest elected official.</p>
+    {% include "includes/ao_example__city.html" %}
   </div>
 
   <p>We’ll contact your authorizing official to let them know that you made this request and to double check that they approve it.</p> 
