--- a/src/registrar/templates/application_anything_else.html
+++ b/src/registrar/templates/application_anything_else.html
@@ -12,7 +12,7 @@
     {% csrf_token %}
    
     <div class="usa-character-count">
-      {{ wizard.form.anything_else|add_label_class:"usa-label" }}
+      {{ wizard.form.anything_else|add_label_class:"usa-label usa-sr-only" }}
       {{ wizard.form.anything_else|add_class:"usa-textarea usa-character-count__field"|attr:"aria-describedby:instructions"|attr:"maxlength=500" }}
       <span class="usa-character-count__message" id="with-hint-textarea-info with-hint-textarea-hint"> You can enter up to 500 characters </span>
     </div>
