Remove leading slash from static img

--- a/src/registrar/templates/application_dotgov_domain.html
+++ b/src/registrar/templates/application_dotgov_domain.html
@@ -47,7 +47,7 @@
 
     <button type="button" class="usa-button usa-button--unstyled">
       <svg class="usa-icon" aria-hidden="true" focusable="false" role="img">
-        <use xlink:href="{%static '/img/sprite.svg'%}#add_circle"></use>
+        <use xlink:href="{%static 'img/sprite.svg'%}#add_circle"></use>
       </svg><span class="margin-left-05">Add another alternative</span>
     </button>
   </div>
