--- a/src/registrar/templates/application_sidebar.html
+++ b/src/registrar/templates/application_sidebar.html
@@ -14,7 +14,7 @@
         {{ form_titles|get_item:this_step }}
         <svg class="usa-icon" aria-labelledby="locked-step" role="img">
           <title id="locked-step">locked until previous steps have been completed </title>
-          <use xlink:href="{%static '/img/sprite.svg'%}#lock"></use>
+          <use xlink:href="{%static 'img/sprite.svg'%}#lock"></use>
       {% endif %}
       </li>
     {% endfor %}
