SVG icon should be an id after all

--- a/src/registrar/templates/application_sidebar.html
+++ b/src/registrar/templates/application_sidebar.html
@@ -13,7 +13,7 @@
         <li class="usa-sidenav__item step--locked">
         {{ form_titles|get_item:this_step }}
         <svg class="usa-icon" aria-labelledby="locked-step" role="img">
-          <title class="sidenav__locked-step">locked until previous steps have been completed </title>
+          <title id="locked-step__{{forloop.counter}}">locked until previous steps have been completed </title>
           <use xlink:href="{%static 'img/sprite.svg'%}#lock"></use>
       {% endif %}
       </li>
