--- a/src/registrar/templates/application_org_federal.html
+++ b/src/registrar/templates/application_org_federal.html
@@ -8,8 +8,10 @@
 <form id="step__{{wizard.steps.current}}" class="usa-form usa-form--large" method="post">
   {{ wizard.management_form }}
   {% csrf_token %}
-  <h2>Which federal branch is your organization in?</h2>
   <fieldset id="federal_type__fieldset" class="usa-fieldset">
+    <legend>
+        <h2>Which federal branch is your organization in?</h2>
+    </legend>
     {% radio_buttons_by_value wizard.form.federal_type as federal_choices %}
     {% include "includes/radio_button.html" with choice=federal_choices.Executive%}
     {% include "includes/radio_button.html" with choice=federal_choices.Judicial%}
