--- a/src/registrar/templates/application_authorizing_official.html
+++ b/src/registrar/templates/application_authorizing_official.html
@@ -25,23 +25,26 @@
   {% csrf_token %}
 
   <fieldset class="usa-fieldset">
+    <legend class="usa-sr-only">
+      Who is the authorizing official for your organization
+    </legend>
     {{ wizard.form.given_name|add_label_class:"usa-label" }}
-    {{ wizard.form.given_name|add_class:"usa-input"|attr:"aria-describedby:instructions" }}
+    {{ wizard.form.given_name|add_class:"usa-input"}}
 
     {{ wizard.form.middle_name|add_label_class:"usa-label" }}
-    {{ wizard.form.middle_name|add_class:"usa-input"|attr:"aria-describedby:instructions" }}
+    {{ wizard.form.middle_name|add_class:"usa-input"}}
 
     {{ wizard.form.family_name|add_label_class:"usa-label" }}
-    {{ wizard.form.family_name|add_class:"usa-input"|attr:"aria-describedby:instructions" }}
+    {{ wizard.form.family_name|add_class:"usa-input"}}
     
     {{ wizard.form.title|add_label_class:"usa-label" }}
-    {{ wizard.form.title|add_class:"usa-input"|attr:"aria-describedby:instructions" }}
+    {{ wizard.form.title|add_class:"usa-input"}}
 
     {{ wizard.form.email|add_label_class:"usa-label" }}
-    {{ wizard.form.email|add_class:"usa-input"|attr:"aria-describedby:instructions" }}
+    {{ wizard.form.email|add_class:"usa-input"}}
 
     {{ wizard.form.phone|add_label_class:"usa-label" }}
-    {{ wizard.form.phone|add_class:"usa-input usa-input--medium"|attr:"aria-describedby:instructions" }}
+    {{ wizard.form.phone|add_class:"usa-input usa-input--medium" }}
   </fieldset>
 
 
