--- a/src/registrar/templates/application_org_contact.html
+++ b/src/registrar/templates/application_org_contact.html
@@ -4,6 +4,7 @@
 
 {% block form_content %}
 
+
 <h2>What is the name and mailing address of your organization?</h2>
 
 <div id="instructions">
@@ -19,10 +20,10 @@
   {{ wizard.management_form }}
   {% csrf_token %}
 
-  {{ wizard.form.organization_name|add_label_class:"usa-label" }}
-  {{ wizard.form.organization_name|add_class:"usa-input"|attr:"aria-describedby:instructions" }}
-
   <fieldset class="usa-fieldset">
+    <legend class="usa-sr-only">What is the name and mailing address of your organization?</legend>
+    {{ wizard.form.organization_name|add_label_class:"usa-label" }}
+    {{ wizard.form.organization_name|add_class:"usa-input" }}
     {{ wizard.form.address_line1|add_label_class:"usa-label" }}
     {{ wizard.form.address_line1|add_class:"usa-input" }}
     {{ wizard.form.address_line2|add_label_class:"usa-label" }}
