--- a/src/registrar/templates/application_other_contacts.html
+++ b/src/registrar/templates/application_other_contacts.html
@@ -12,8 +12,10 @@
   {{ wizard.management_form }}
   {% csrf_token %}
 
-  <h2> Contact 2 </h2>
   <fieldset class="usa-fieldset">
+    <legend>
+      <h2> Contact 2 </h2>
+    </legend>
     {{ wizard.form.given_name|add_label_class:"usa-label" }}
     {{ wizard.form.given_name|add_class:"usa-input"|attr:"aria-describedby:instructions" }}
 
