--- a/src/registrar/templates/application_your_contact.html
+++ b/src/registrar/templates/application_your_contact.html
@@ -20,6 +20,9 @@
   {% csrf_token %}
 
   <fieldset class="usa-fieldset">
+    <legend class="usa-sr-only">
+      Your contact information
+    </legend>
     {{ wizard.form.given_name|add_label_class:"usa-label" }}
     {{ wizard.form.given_name|add_class:"usa-input"|attr:"aria-describedby:instructions" }}
 
