Address PR comments

--- a/src/registrar/templates/application_authorizing_official.html
+++ b/src/registrar/templates/application_authorizing_official.html
@@ -28,14 +28,14 @@
     <legend class="usa-sr-only">
       Who is the authorizing official for your organization
     </legend>
-    {{ wizard.form.given_name|add_label_class:"usa-label" }}
-    {{ wizard.form.given_name|add_class:"usa-input"}}
+    {{ wizard.form.first_name|add_label_class:"usa-label" }}
+    {{ wizard.form.first_name|add_class:"usa-input"}}
 
     {{ wizard.form.middle_name|add_label_class:"usa-label" }}
     {{ wizard.form.middle_name|add_class:"usa-input"}}
 
-    {{ wizard.form.family_name|add_label_class:"usa-label" }}
-    {{ wizard.form.family_name|add_class:"usa-input"}}
+    {{ wizard.form.last_name|add_label_class:"usa-label" }}
+    {{ wizard.form.last_name|add_class:"usa-input"}}
     
     {{ wizard.form.title|add_label_class:"usa-label" }}
     {{ wizard.form.title|add_class:"usa-input"}}
