--- a/src/registrar/templates/application_other_contacts.html
+++ b/src/registrar/templates/application_other_contacts.html
@@ -16,14 +16,14 @@
     <legend>
       <h2> Contact 2 </h2>
     </legend>
-    {{ wizard.form.given_name|add_label_class:"usa-label" }}
-    {{ wizard.form.given_name|add_class:"usa-input"|attr:"aria-describedby:instructions" }}
+    {{ wizard.form.first_name|add_label_class:"usa-label" }}
+    {{ wizard.form.first_name|add_class:"usa-input"|attr:"aria-describedby:instructions" }}
 
     {{ wizard.form.middle_name|add_label_class:"usa-label" }}
     {{ wizard.form.middle_name|add_class:"usa-input"|attr:"aria-describedby:instructions" }}
 
-    {{ wizard.form.family_name|add_label_class:"usa-label" }}
-    {{ wizard.form.family_name|add_class:"usa-input"|attr:"aria-describedby:instructions" }}
+    {{ wizard.form.last_name|add_label_class:"usa-label" }}
+    {{ wizard.form.last_name|add_class:"usa-input"|attr:"aria-describedby:instructions" }}
     
     {{ wizard.form.title|add_label_class:"usa-label" }}
     {{ wizard.form.title|add_class:"usa-input"|attr:"aria-describedby:instructions" }}
