--- a/src/registrar/templates/application_your_contact.html
+++ b/src/registrar/templates/application_your_contact.html
@@ -23,14 +23,14 @@
     <legend class="usa-sr-only">
       Your contact information
     </legend>
-    {{ wizard.form.given_name|add_label_class:"usa-label" }}
-    {{ wizard.form.given_name|add_class:"usa-input"|attr:"aria-describedby:instructions" }}
+    {{ wizard.form.first_name|add_label_class:"usa-label" }}
+    {{ wizard.form.first_name|add_class:"usa-input"|attr:"aria-describedby:instructions" }}
 
     {{ wizard.form.middle_name|add_label_class:"usa-label" }}
     {{ wizard.form.middle_name|add_class:"usa-input"|attr:"aria-describedby:instructions" }}
 
-    {{ wizard.form.family_name|add_label_class:"usa-label" }}
-    {{ wizard.form.family_name|add_class:"usa-input"|attr:"aria-describedby:instructions" }}
+    {{ wizard.form.last_name|add_label_class:"usa-label" }}
+    {{ wizard.form.last_name|add_class:"usa-input"|attr:"aria-describedby:instructions" }}
     
     {{ wizard.form.title|add_label_class:"usa-label" }}
     {{ wizard.form.title|add_class:"usa-input"|attr:"aria-describedby:instructions" }}
