Add main back to individual html pages (PR fix)

--- a/src/registrar/templates/404.html
+++ b/src/registrar/templates/404.html
@@ -5,9 +5,11 @@
 {% block title %}{% translate "Page not found" %}{% endblock %}
 
 {% block content %}
+<main id="main-content" class="grid-container">
 
-<h2>{% translate "Page not found" %}</h2>
+  <h2>{% translate "Page not found" %}</h2>
 
-<p>{% translate "The requested page could not be found." %}</p>
+  <p>{% translate "The requested page could not be found." %}</p>
 
+</main>
 {% endblock %}
