--- a/src/registrar/templates/401.html
+++ b/src/registrar/templates/401.html
@@ -4,24 +4,25 @@
 {% block title %}{% translate "Unauthorized" %}{% endblock %}
 
 {% block content %}
-<h1>{% translate "Unauthorized" %}</h1>
+<main id="main-content" class="grid-container">
+  <h1>{% translate "Unauthorized" %}</h1>
 
-{% if friendly_message %}
-<p>{{ friendly_message }}</p>
-{% else %}
-<p>{% translate "Authorization failed." %}</p>
-{% endif %}
+  {% if friendly_message %}
+  <p>{{ friendly_message }}</p>
+  {% else %}
+  <p>{% translate "Authorization failed." %}</p>
+  {% endif %}
 
-<p><a href="{% url 'login' %}">
+  <p><a href="{% url 'login' %}">
     {% translate "Would you like to try logging in again?" %}
-</a></p>
+  </a></p>
 
-{% if log_identifier %}
-<p>Here's a unique identifier for this error.</p>
-<blockquote>{{ log_identifier }}</blockquote>
-<p>{% translate "Please include it if you contact us." %}</p>
-{% endif %}
+  {% if log_identifier %}
+  <p>Here's a unique identifier for this error.</p>
+  <blockquote>{{ log_identifier }}</blockquote>
+  <p>{% translate "Please include it if you contact us." %}</p>
+  {% endif %}
 
-TODO: Content team to create a "how to contact us" footer for the error pages
-
+  TODO: Content team to create a "how to contact us" footer for the error pages
+</main>
 {% endblock %}
