--- a/src/registrar/templates/profile.html
+++ b/src/registrar/templates/profile.html
@@ -5,22 +5,24 @@ Edit your User Profile
 {% endblock title %}
 
 {% block content %}
-<form class="usa-form usa-form--large" method="post" enctype="multipart/form-data">
-  {% csrf_token %}
-  <fieldset class="usa-fieldset">
-    <legend class="usa-legend usa-legend--large">Your profile</legend>
-    <p>
+<main id="main-content" class="grid-container">
+  <form class="usa-form usa-form--large" method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    <fieldset class="usa-fieldset">
+      <legend class="usa-legend usa-legend--large">Your profile</legend>
+      <p>
       Required fields are marked with an asterisk (<abbr
         title="required"
         class="usa-hint usa-hint--required"
-        >*</abbr
-      >).
-    </p>
-		{% for field in profile_form %}
-		<label class="usa-label" for="id_{{ field.name }}">{{ field.label }}</label>
-    {{ field }}
-    {% endfor %}
-	</fieldset>
-	<button type="submit" class="usa-button usa-button--big">Save Changes</button>
-</form>
+        >*</abbr>).
+      </p>
+      {% for field in profile_form %}
+      <label class="usa-label" for="id_{{ field.name }}">{{ field.label }}</label>
+      {{ field }}
+      {% endfor %}
+  </fieldset>
+    <button type="submit" class="usa-button usa-button--big">Save Changes</button>
+  </form>
+</main>
 {% endblock content %}
+
