--- a/src/registrar/templates/whoami.html
+++ b/src/registrar/templates/whoami.html
@@ -3,7 +3,9 @@
 
 {% block title %} Hello {% endblock %}
 {% block content %}
-<p> Hello {{ user.last_name|default:"No last name given" }}, {{ user.first_name|default:"No first name given" }} &lt;{{ user.email }}&gt;!  </p>
+<main id="main-content" class="grid-container">
+  <p> Hello {{ user.last_name|default:"No last name given" }}, {{ user.first_name|default:"No first name given" }} &lt;{{ user.email }}&gt;!  </p>
 
-<p><a href="/openid/logout">Click here to log out</a></p>        
+  <p><a href="/openid/logout">Click here to log out</a></p>        
+</main>
 {% endblock %}
