Review feedback: <del> for broken links, name servers button

--- a/src/registrar/templates/application_done.html
+++ b/src/registrar/templates/application_done.html
@@ -19,8 +19,8 @@ your authorizing official, and any contacts you added.</p>
         meets our naming requirements.
     </li>
 
-    <li> You can <a href="/application/{{ application_id }}">check the
-            status</a> of your request at any time.
+    <li> You can <a href="/application/{{ application_id }}"><del>check the
+            status</del></a> of your request at any time.
     </li>
 
     <li> We'll email you with any questions or when we complete our
@@ -32,6 +32,9 @@ your authorizing official, and any contacts you added.</p>
 <p>Before your domain can be used we'll need information about your
 domain name servers. If you have this information you can enter it now.
 If you don't have it, that's okay. You can enter it later on the
-<a href="/domains">manage your domains page</a>.
+<a href="/domains"><del>manage your domains page</del></a>.
 </p>
+
+<p><a href="/application/{{ application_id }}#nameservers" class="usa-button">Enter DNS name servers</a></p>
+
 {% endblock %}
