Save button for domain application

--- a/src/registrar/templates/application_dotgov_domain.html
+++ b/src/registrar/templates/application_dotgov_domain.html
@@ -27,10 +27,10 @@
 
   {{ wizard.management_form }}
   {% csrf_token %}
-  {{ wizard.form.dotgov_domain|add_label_class:"usa-label" }}
+  {{ wizard.form.requested_domain|add_label_class:"usa-label" }}
   <div class="display-flex flex-align-center">
     <span class="padding-top-05 padding-right-2px">www.</span>
-    {{ wizard.form.dotgov_domain|add_class:"usa-input"|attr:"aria-describedby:domain_instructions" }}
+    {{ wizard.form.requested_domain|add_class:"usa-input"|attr:"aria-describedby:domain_instructions" }}
     <span class="padding-top-05 padding-left-2px">.gov </span>
   </div>
   <button type="button" class="usa-button">Check availability </button>
