--- a/src/registrar/templates/application_org_contact.html
+++ b/src/registrar/templates/application_org_contact.html
@@ -28,9 +28,9 @@
     {{ wizard.form.address_line1|add_class:"usa-input" }}
     {{ wizard.form.address_line2|add_label_class:"usa-label" }}
     {{ wizard.form.address_line2|add_class:"usa-input" }}
-    {{ wizard.form.us_state|add_label_class:"usa-label" }}
-    <div class="usa-combo-box">
-      {{ wizard.form.us_state|add_class:"usa-select" }}
+    {{ wizard.form.state_territory|add_label_class:"usa-label" }}
+    <div class="usa-combo-box" data-default-value>
+      {{ wizard.form.state_territory|add_class:"usa-select" }}
     </div>
     {{ wizard.form.zipcode|add_label_class:"usa-label" }}
     {{ wizard.form.zipcode|add_class:"usa-input usa-input--small" }}
