Fix failing tests

--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -32,7 +32,7 @@
   <tbody>
     {% for application in domain_applications %}
       <tr>
-        <th>{{ application.requested_domain.website }}</th>
+        <th>{{ application.requested_domain.name }}</th>
         <td>{{ application.status }}</td>
       </tr>
     {% endfor %}
