Adding some link targets

--- a/src/registrar/templates/includes/footer.html
+++ b/src/registrar/templates/includes/footer.html
@@ -79,17 +79,17 @@
             >
           </li>
           <li class="usa-identifier__required-links-item">
-            <a href="" class="usa-identifier__required-link usa-link"
+            <a href="https://www.dhs.gov/accessibility" class="usa-identifier__required-link usa-link"
               >Accessibility</a
             >
           </li>
           <li class="usa-identifier__required-links-item">
-            <a href="" class="usa-identifier__required-link usa-link"
+            <a href="https://www.dhs.gov/freedom-information-act-foia" class="usa-identifier__required-link usa-link"
               >FOIA requests</a
             >
           </li>
           <li class="usa-identifier__required-links-item">
-            <a href="" class="usa-identifier__required-link usa-link"
+            <a href="https://www.cisa.gov/cisa-no-fear-act-reporting" class="usa-identifier__required-link usa-link"
               >No FEAR Act data</a
             >
           </li>
@@ -104,7 +104,7 @@
             >
           </li>
           <li class="usa-identifier__required-links-item">
-            <a href="" class="usa-identifier__required-link usa-link"
+            <a href="https://home.dotgov.gov/privacy/" class="usa-identifier__required-link usa-link"
               >Privacy policy</a
             >
           </li>
