More link targets

--- a/src/registrar/templates/includes/footer.html
+++ b/src/registrar/templates/includes/footer.html
@@ -60,7 +60,7 @@
         >
           <p class="usa-identifier__identity-domain">www.get.gov</p>
           <p class="usa-identifier__identity-disclaimer">
-            An official website of the <a href="https://cisa.gov">Cybersecurity and Infrastructure Security Agency</a>
+            An official website of the <a href="https://www.cisa.gov">Cybersecurity and Infrastructure Security Agency</a>
           </p>
         </section>
       </div>
@@ -73,34 +73,16 @@
         <ul class="usa-identifier__required-links-list">
           <li class="usa-identifier__required-links-item">
             <a
-              href="javascript:void(0)"
+              href="https://home.dotgov.gov/about/"
               class="usa-identifier__required-link usa-link"
-              >About DotGov</a
+              >About .gov</a
             >
           </li>
           <li class="usa-identifier__required-links-item">
-            <a href="https://www.dhs.gov/accessibility" class="usa-identifier__required-link usa-link"
-              >Accessibility</a
-            >
-          </li>
-          <li class="usa-identifier__required-links-item">
-            <a href="https://www.dhs.gov/freedom-information-act-foia" class="usa-identifier__required-link usa-link"
-              >FOIA requests</a
-            >
-          </li>
-          <li class="usa-identifier__required-links-item">
-            <a href="https://www.cisa.gov/cisa-no-fear-act-reporting" class="usa-identifier__required-link usa-link"
-              >No FEAR Act data</a
-            >
-          </li>
-          <li class="usa-identifier__required-links-item">
-            <a href="" class="usa-identifier__required-link usa-link"
-              >DHS vulnerability disclosure</a
-            >
-          </li>
-          <li class="usa-identifier__required-links-item">
-            <a href="" class="usa-identifier__required-link usa-link"
-              >Non-discrimination policy</a
+            <a
+              href="https://github.com/cisagov/getgov"
+              class="usa-identifier__required-link usa-link"
+              >.gov on Github</a
             >
           </li>
           <li class="usa-identifier__required-links-item">
@@ -109,8 +91,23 @@
             >
           </li>
           <li class="usa-identifier__required-links-item">
+            <a href="https://www.dhs.gov/accessibility" class="usa-identifier__required-link usa-link"
+              >Accessibility</a
+            >
+          </li>
+          <li class="usa-identifier__required-links-item">
             <a href="" class="usa-identifier__required-link usa-link"
-              >Department of Homeland Security</a
+              >Vulnerability disclosure policy</a
+            >
+          </li>
+          <li class="usa-identifier__required-links-item">
+            <a href="https://www.cisa.gov/cisa-no-fear-act-reporting" class="usa-identifier__required-link usa-link"
+              >No FEAR Act data</a
+            >
+          </li>
+          <li class="usa-identifier__required-links-item">
+            <a href="https://www.dhs.gov/freedom-information-act-foia" class="usa-identifier__required-link usa-link"
+              >FOIA requests</a
             >
           </li>
         </ul>
