--- a/src/registrar/templates/includes/footer.html
+++ b/src/registrar/templates/includes/footer.html
@@ -46,7 +46,7 @@
     >
       <div class="usa-identifier__container">
         <div class="usa-identifier__logos">
-          <a href="https://cisa.gov" class="usa-identifier__logo"
+          <a href="https://www.cisa.gov" class="usa-identifier__logo"
             ><img
               class="usa-identifier__logo-img"
               src="{% static 'img/CISA_logo.png' %}"
@@ -58,7 +58,7 @@
           class="usa-identifier__identity"
           aria-label="Agency description"
         >
-          <p class="usa-identifier__identity-domain">www.get.gov</p>
+          <p class="usa-identifier__identity-domain">get.gov</p>
           <p class="usa-identifier__identity-disclaimer">
             An official website of the <a href="https://www.cisa.gov">Cybersecurity and Infrastructure Security Agency</a>
           </p>
