--- a/src/registrar/templates/includes/footer.html
+++ b/src/registrar/templates/includes/footer.html
@@ -22,13 +22,10 @@
           </div>
           <div class="usa-footer__contact-links mobile-lg:grid-col-6">
             <p class="usa-footer__contact-heading">
-              Contact Us
+              Contact us
             </p>
             <address class="usa-footer__address">
               <div class="usa-footer__contact-info grid-row grid-gap">
-                <div class="grid-col-auto">
-                  Phone: <a href="tel:1-877-734-4688">1-877-734-4688</a>
-                </div>
                 <div class="grid-col-auto">
                   <a href="mailto:registrar@dotgov.gov">registrar@dotgov.gov</a>
                 </div>
@@ -60,7 +57,7 @@
         >
           <p class="usa-identifier__identity-domain">get.gov</p>
           <p class="usa-identifier__identity-disclaimer">
-            An official website of the <a href="https://www.cisa.gov">Cybersecurity and Infrastructure Security Agency</a>
+            An official website of the <a href="https://www.cisa.gov" class="usa-link usa-link--external">Cybersecurity and Infrastructure Security Agency</a>
           </p>
         </section>
       </div>
@@ -81,7 +78,7 @@
           <li class="usa-identifier__required-links-item">
             <a
               href="https://github.com/cisagov/getgov"
-              class="usa-identifier__required-link usa-link"
+              class="usa-identifier__required-link usa-link usa-link--external"
               >.gov on Github</a
             >
           </li>
@@ -96,7 +93,7 @@
             >
           </li>
           <li class="usa-identifier__required-links-item">
-            <a href="" class="usa-identifier__required-link usa-link"
+            <a href="#" class="usa-identifier__required-link usa-link"
               >Vulnerability disclosure policy</a
             >
           </li>
