Use an explicit width in HTML so it works without CSS
Co-authored-by: Seamus Johnston <seamus.johnston@gsa.gov>

--- a/src/registrar/templates/includes/footer.html
+++ b/src/registrar/templates/includes/footer.html
@@ -49,6 +49,7 @@
               src="{% static 'img/CISA_logo.png' %}"
               alt="CISA logo"
               role="img"
+              width="200px"
           /></a>
         </div>
         <section
