Review feedback: TODO link and better alt text

--- a/src/registrar/templates/includes/footer.html
+++ b/src/registrar/templates/includes/footer.html
@@ -15,8 +15,8 @@
               <img
                 class="usa-footer__logo-img"
                 src="{% static 'img/dottedgov-round.svg' %}"
-                alt="dot gov registrar"
-								width="100px"
+                alt="dot gov registrar logo"
+                width="100px"
               />
             </div>
           </div>
@@ -94,7 +94,7 @@
             >
           </li>
           <li class="usa-identifier__required-links-item">
-            <a href="#" class="usa-identifier__required-link usa-link"
+            <a href="TODO" class="usa-identifier__required-link usa-link"
               >Vulnerability disclosure policy</a
             >
           </li>
