--- a/src/registrar/assets/sass/_theme/_uswds-theme.scss
+++ b/src/registrar/assets/sass/_theme/_uswds-theme.scss
@@ -16,8 +16,8 @@ in the form $setting: value,
 @use "cisa_colors" as *;
 
 @use "uswds-core" with (
-  $theme-banner-background-color: "ink",
-  $theme-banner-link-color: "primary-light",
+  $theme-banner-background-color: "primary-darker",
+  $theme-banner-link-color: "primary-lighter",
   $theme-banner-max-width: "none",
   $theme-show-notifications: false,
   $theme-hero-image: "../img/registrar/dotgov_banner.png",
